password toggle done

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,12 +1,12 @@
 
-<div style="height: 100%; width: 100%">
-  <div class="align-items-start" style="height: 15%; width: 100%">
+<div class="container-fluid whole-container w-100 h-100">
+  <div class="align-items-start w-100 h-15" >
     <app-header ></app-header>
   </div>
-  <div class="align-items-center" style="height: 70%; width: 100%">
-    <router-outlet></router-outlet>
+  <div class="home-body">
+    <app-home-body></app-home-body>
   </div>
-  <div class="align-items-center" style="height: 15%; width: 100%; position: fixed ;background-color: teal">
+  <div class="align-items-center w-100 h-15" >
     <app-footer ></app-footer>
   </div>
 </div>
