--- a/src/app/registration/registration.component.scss
+++ b/src/app/registration/registration.component.scss
@@ -8,3 +8,8 @@
     font-size: x-large;
     font-family: sans-serif;
  }
+.eyeIcon,.eyeIcon_slash{
+    float: right;
+    margin-top: -28px;
+    margin-right: 7px;
+}
