--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -11,9 +11,9 @@
   </div>
   <div class="form-group">
     <label for="password">Password</label>
-    <input type="text" class="form-control" formControlName="password" [ngClass]="{'is-invalid':form.get('password').touched && form.get('password').invalid}"/>
+    <input type="password" id="passwordLog" class="form-control" formControlName="password" [ngClass]="{'is-invalid':form.get('password').touched && form.get('password').invalid}"/><fa-icon *ngIf="!showPasswordValue" class="eyeIcon" (click)="toggle_password()" [icon]="faEye"></fa-icon><fa-icon *ngIf="showPasswordValue" class="eyeIcon_slash" (click)="toggle_password()" [icon]="faEyeSlash"></fa-icon>
     <div *ngIf="form.get('password').touched && form.get('password').invalid" class="invalid-feedback">
-      <div *ngIf="form.get('password').errors.required">Email is Required</div>
+      <div *ngIf="form.get('password').errors.required">Password is Required</div>
       <div *ngIf="form.get('password').errors.minlength">Password should be of minimum 6 characters</div>
       <div *ngIf="form.get('password').errors.maxlength">Password should be of maximum 10 characters</div>
     </div>
