--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -34,5 +34,5 @@
 
   <!-- Copyright -->
   <div class="footer-copyright text-center py-3" style="padding:0px !important">© 2020 Copyright:
-    <a href="https://mdbootstrap.com/"> GOLU</a>
+    <a href="https://mdbootstrap.com/"> Employee Mate</a>
   </div>
