--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
 <!-- <router-outlet><router-outlet> -->
-    <app-user></app-user>
-    <!-- <app-home></app-home> -->
+    <!-- <app-user></app-user> -->
+    <app-home></app-home>
