--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -4,7 +4,6 @@
     background-color: #006699;
 }
 .align-items-center{
-    background-color: #383838;
     color: #fff;
 }
 .whole-container{
@@ -13,4 +12,8 @@
 .home-body{
     background-color: #e9e9e9;
     height: 81.5%;
+}
+.footer_height{
+    background-color: #383838;
+    height: 9.2%;
 }
