--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,8 +1,8 @@
 <div class="container">
   <div class="welcomeTab text-center">Welcome Back!</div>
-<form name="form" [formGroup]="form" (ngSubmit)="form.valid && submit()">
+<form name="form" [formGroup]="form" (keydown)="keyDownFunction($event)" (ngSubmit)="form.valid && submit()">
   <div class="form-group">
-    <label for="email">Username</label>
+    <label for="email">Email</label>
     <input type="text" class="form-control" formControlName="email" [ngClass]="{'is-invalid':form.get('email').touched && form.get('email').invalid}"/>
     <div *ngIf="form.get('email').touched && form.get('email').invalid" class="invalid-feedback">
       <div *ngIf="form.get('email').errors.required">Email is Required</div>
@@ -11,7 +11,7 @@
   </div>
   <div class="form-group">
     <label for="password">Password</label>
-    <input type="password" id="passwordLog" class="form-control" formControlName="password" [ngClass]="{'is-invalid':form.get('password').touched && form.get('password').invalid}"/><fa-icon *ngIf="!showPasswordValue" class="eyeIcon" (click)="toggle_password()" [icon]="faEye"></fa-icon><fa-icon *ngIf="showPasswordValue" class="eyeIcon_slash" (click)="toggle_password()" [icon]="faEyeSlash"></fa-icon>
+    <input type="password" id="passwordLog" class="form-control" formControlName="password" maxlength="10" [ngClass]="{'is-invalid':form.get('password').touched && form.get('password').invalid}"/><fa-icon *ngIf="!showPasswordValue" class="eyeIcon" (click)="toggle_password()" [icon]="faEye"></fa-icon><fa-icon *ngIf="showPasswordValue" class="eyeIcon_slash" (click)="toggle_password()" [icon]="faEyeSlash"></fa-icon>
     <div *ngIf="form.get('password').touched && form.get('password').invalid" class="invalid-feedback">
       <div *ngIf="form.get('password').errors.required">Password is Required</div>
       <div *ngIf="form.get('password').errors.minlength">Password should be of minimum 6 characters</div>
