--- a/src/app/registration/registration.component.html
+++ b/src/app/registration/registration.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="welcomeTab text-center">Welcome To EmployeeMate!</div>
-  <form name="form" [formGroup]="form" (ngSubmit)="form.valid && register()">
+  <form name="form" [formGroup]="form" (keydown)="keyDownFunction($event)" (ngSubmit)="form.valid && register()">
     <div class="form-group">
       <label for="firstName">First Name</label>
       <input type="text" class="form-control" formControlName="firstName" [ngClass]="{'is-invalid':form.get('firstName').touched && form.get('firstName').invalid}"/>
@@ -25,7 +25,7 @@
     </div>
     <div class="form-group">
       <label for="password">Password</label>
-      <input type="password" class="form-control" id="passwordReg" formControlName="password" [ngClass]="{'is-invalid':form.get('password').touched && form.get('password').invalid}" /><fa-icon *ngIf="!showPasswordValue" class="eyeIcon" (click)="toggle_password()" [icon]="faEye"></fa-icon><fa-icon *ngIf="showPasswordValue" class="eyeIcon_slash" (click)="toggle_password()" [icon]="faEyeSlash"></fa-icon>
+      <input type="password" class="form-control" maxlength="10" id="passwordReg" formControlName="password" [ngClass]="{'is-invalid':form.get('password').touched && form.get('password').invalid}" /><fa-icon *ngIf="!showPasswordValue" class="eyeIcon" (click)="toggle_password()" [icon]="faEye"></fa-icon><fa-icon *ngIf="showPasswordValue" class="eyeIcon_slash" (click)="toggle_password()" [icon]="faEyeSlash"></fa-icon>
       <div *ngIf="form.get('password').touched && form.get('password').invalid" class="invalid-feedback">
         <div *ngIf="form.get('password').errors.required">Email is Required</div>
         <div *ngIf="form.get('password').errors.minlength">Password should be of minimum 6 characters</div>
