--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,40 +1,32 @@
-<div class="container-fluid w-100 h-100 containerbg">
-    <div class="row w-25 h-25">
-        <div class="col-lg-12 logo">
-           
-        </div>
-    </div>
-      <div class="row">
-          <div class="col-lg-12">
-            <div class="card mx-auto w-75 h-120 overlay_div">
-                <div class="card-body w-90 h-100 card_body_padding">
-                    <div class="row w-100 h-100 ml-0 mr-0">
-                        <div class="col-lg-6 imageDiv">
-                        </div>
-                        <div class="col-lg-6">
+<div class="container-fluid card_body_padding w-100 h-100 ">
+    <img class="w-100 h-100" src="../../assets/BackgroundCity.jpg">
 
-                              <div>
-                                  <div *ngIf="showLoginPage">
-                                      <app-login (dataInputFormObject)="getLoginDetails($event)"></app-login>
-                                  </div>
-                                  <div *ngIf="!showLoginPage">
-                                      <app-registration (registrationArray)="getRegistrationDetails($event)"
-                                          (toggleHandler)="toggleEventHandler($event)">
-                                      </app-registration>
-                                  </div>
-                                  <div *ngIf="showLoginPage">
-                                    <div class="linkToRegister">New to EmployeeMate? Please <span type="button" class="loginRegHyperLink" (click)="toggle('reg')">Register</span></div>
-                                </div>
-                                <div *ngIf="!showLoginPage">
-                                    <div class="linkToRegister">Already Registered? Please <span type="button" class="loginRegHyperLink" (click)="toggle('login')">Login</span></div>
-                                </div>
-                                 
-                              </div>
-                        </div>
+    <div class="content">   
+        <div class="row  h-100 ">
+            <div class="col-lg-12 ">
+                <img class="logo-holder" src="../../assets/logo.png">
+            </div>
+        </div>
+        <div class="row w-100 h-100 ml-0 mr-0">
+            <div class="col-lg-12">
+
+                  <div>
+                      <div *ngIf="showLoginPage">
+                          <app-login (dataInputFormObject)="getLoginDetails($event)"></app-login>
+                      </div>
+                      <div *ngIf="!showLoginPage">
+                          <app-registration (registrationArray)="getRegistrationDetails($event)"
+                              (toggleHandler)="toggleEventHandler($event)">
+                          </app-registration>
+                      </div>
+                      <div *ngIf="showLoginPage">
+                        <div class="linkToRegister">New to EmployeeMate? Please <span type="button" class="loginRegHyperLink" (click)="toggle('reg')">Register</span></div>
                     </div>
-                </div>
-                
-          </div>
-      </div>
-      
-</div>
+                    <div *ngIf="!showLoginPage">
+                        <div class="linkToRegister">Already Registered? Please <span type="button" class="loginRegHyperLink" (click)="toggle('login')">Login</span></div>
+                    </div>
+                     
+                  </div>
+            </div>
+    </div>
+  </div>
