--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,2 @@
-<!-- <router-outlet><router-outlet> -->
-    <!-- <app-user></app-user> -->
-    <app-home></app-home>
+ <router-outlet><router-outlet> 
+    
