--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -11,7 +11,7 @@
   </div>
   <div class="form-group">
     <label for="password">Password</label>
-    <input type="password" id="passwordLog" class="form-control" formControlName="password" maxlength="10" [ngClass]="{'is-invalid':form.get('password').touched && form.get('password').invalid}"/><fa-icon *ngIf="!showPasswordValue" class="eyeIcon" (click)="toggle_password()" [icon]="faEye"></fa-icon><fa-icon *ngIf="showPasswordValue" class="eyeIcon_slash" (click)="toggle_password()" [icon]="faEyeSlash"></fa-icon>
+    <input type="password" id="passwordLog" class="form-control" formControlName="password" maxlength="10" [ngClass]="{'is-invalid':form.get('password').touched && form.get('password').invalid}"/>
     <div *ngIf="form.get('password').touched && form.get('password').invalid" class="invalid-feedback">
       <div *ngIf="form.get('password').errors.required">Password is Required</div>
       <div *ngIf="form.get('password').errors.minlength">Password should be of minimum 6 characters</div>
@@ -19,7 +19,7 @@
     </div>
   </div>
   <div class="form-group">
-   <button class="btn btn-primary" type="submit" [disabled]="!form.valid">Login</button>
+   <button class="btn btn-primary"  type="submit" [disabled]="!form.valid">Login</button>
   </div>
 </form>
 </div>
