--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -10,7 +10,7 @@
             </a>
         <div class="dropdown-menu dropdown-menu-right dropdown-info" aria-labelledby="navbarDropdownMenuLink-4">
           <a class="dropdown-item" href="#">My account</a>
-          <a class="dropdown-item" (click)="logout();">Log out</a>
+          <a class="dropdown-item" [routerLink]="['/login']">Logout</a>
         </div>
       </li>
     </ul>
