--- a/src/app/components/detailed-property-page/detailed-property-page.component.html
+++ b/src/app/components/detailed-property-page/detailed-property-page.component.html
@@ -1,6 +1,13 @@
-<div class="row">
-    <div class="col-lg-12">
-     
-</div>
-
+<div class="container-fluid w-100">
+  <div class="row w-100">
+    <div class="col-sm">
+      One of three columns
+    </div>
+    <div class="col-sm">
+      One of three columns
+    </div>
+    <div class="col-sm">
+      One of three columns
+    </div>
+  </div>
 </div>
