--- a/src/app/components/detailed-property-page/detailed-property-page.component.html
+++ b/src/app/components/detailed-property-page/detailed-property-page.component.html
@@ -1,13 +1,18 @@
-<div class="container-fluid w-100">
-  <div class="row w-100">
-    <div class="col-sm">
-      One of three columns
-    </div>
-    <div class="col-sm">
-      One of three columns
-    </div>
-    <div class="col-sm">
-      One of three columns
-    </div>
+<div class="container-fluid main_container">
+    <div class="card mx-auto w-100 h-120 overlay_div">
+        <div class="card-body w-100 h-100">
+            <div class="row">
+                    <div class="col-lg-6 w-100"><input class="w-100 h-100" type="text"   [(ngModel)]="searchTexttech" placeholder="Tech park/location"  />
+                      <ul class="cityArrayList" id="techParkList" *ngIf="searchTexttech">
+                          <li id="cityArrayListLi" *ngFor="let tech of techParkArray| filter : searchTexttech" >
+                            {{tech}}
+                          </li>
+                        </ul></div>
+                <div class="col-lg-2"><button [disabled]="!disableButton" class="btn btn-primary" (click)="showDetailedFilteredValue()">SEARCH</button></div>
+            </div>
+        </div>
+        
   </div>
+   <app-card-detailed-body></app-card-detailed-body>
+    
 </div>
